updated about section

--- a/index.html
+++ b/index.html
@@ -102,27 +102,52 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.Arts Bachelors Degree<br />M.Sc. Masters Degree</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Greetings, I'm Jeremiah, Navy veteran who has charted a unique course from healthcare to the world of software development. With a graduate degree in healthcare and a background in serving our country, I've discovered a new and fervent passion for coding. Here's a little glimpse into who I am.
+              Greetings, I'm Jeremiah!
+              I'm a Navy veteran who has charted a unique course from healthcare to the world of software development.
+              With a graduate degree in healthcare and a background in serving our country,
+              I've discovered a new and fervent passion for coding.
+              Here's a little glimpse into who I am.
 
-              **My Journey:**
-              After years of dedicated service in the Navy, I transitioned into the healthcare industry, where I acquired valuable skills in patient care and healthcare management. It was a fulfilling and honorable path, but life had more surprises in store for me. Through a twist of fate, I found my true calling in the dynamic world of web development. This transition has opened up a world of creativity, problem-solving, and innovation that I now find deeply satisfying.
+              After years of dedicated service in the Navy, I transitioned into the healthcare industry,
+              where I acquired valuable skills in patient care and healthcare management.
+              It was a fulfilling and honorable path, but life had more surprises in store for me.
+              Through a twist of fate, I found my true calling in the dynamic world of web development.
+              This transition has opened up a world of creativity,
+              problem-solving, and innovation that I now find deeply satisfying.
 
-              **Academic Pursuits:**
-              My academic journey led me to a graduate degree in healthcare, equipping me with a unique blend of analytical and critical thinking skills that have proven invaluable in the tech world. My background in healthcare has instilled a strong sense of empathy and attention to detail, qualities I now bring to my coding projects.
+              My academic journey led me to a graduate degree in healthcare,
+              equipping me with a unique blend of analytical and critical thinking skills
+              that have proven invaluable in the tech world.
+              My background in healthcare has instilled a strong sense of empathy and attention to detail,
+              qualities I now bring to my coding projects.
 
-              **Introverted Minimalist:**
-              I'm a true introvert at heart, finding solace and inspiration in the quiet moments of life. My minimalist lifestyle reflects not only my simplicity in design but also in my approach to problem-solving. I believe that less is often more, both in code and in life. It's this mindset that helps me create elegant and efficient solutions.
+<!--              Being a true introvert at heart, find solace and inspiration in the quiet moments of life.
+My minimalist lifestyle reflects not only my simplicity in design but also in my approach to problem-solving.
+I believe that less is often more, both in code and in life.
+It's this mindset that helps me create elegant and efficient solutions.-->
 
-              **Southern Roots:**
-              Born and raised in the heart of the South, I carry with me the values of southern hospitality and a deep connection to the outdoors. Nature is my sanctuary, and I often seek refuge in the beauty of the natural world, which serves as a wellspring of creativity and inspiration.
+<!--              Southern Roots-->
+              Born and raised in the heart of the South,
+              I carry with me the values of southern hospitality and a deep connection to the outdoors.
+              Nature is my sanctuary, and I often seek refuge in the beauty of the natural world,
+              which serves as a wellspring of creativity and inspiration.
 
-              **My Passions:**
-              In my free time, you can find me exploring the great outdoors, hiking through scenic trails, or simply enjoying the peace and serenity of a campfire under the stars. This connection with nature complements my work in web development, as it fuels my imagination and problem-solving abilities.
+<!--              My Passions-->
+              In my free time, you can find me exploring the great outdoors, hiking through scenic trails,
+              or simply enjoying the peace and serenity of a campfire under the stars.
+              This connection with nature complements my work in web development,
+              as it fuels my imagination and problem-solving abilities.
+              <br><br>
+
+              Overall,
+              I'm excited
+              to bring this unique combination of experiences and perspectives to the web development community,
+              where I continue to learn, grow, and create meaningful solutions.
             </p>
           </div>
         </div>
