--- a/index.html
+++ b/index.html
@@ -47,29 +47,26 @@
         <h1 class="title">Jeremiah Matthews</h1>
         <p class="section__text__p2">Full Stack Web Developer</p>
         <div class="btn-container">
-          <button
-            class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example')"
-          >
-            Download CV
-          </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Contact Info
+<!--          <button-->
+<!--            class="btn btn-color-2"-->
+<!--            onclick="window.open('./assets/resume-example.pdf')"-->
+<!--          >-->
+<!--            Download CV-->
+<!--          </button>-->
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info
           </button>
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='/https://linkedin.com/'"
-          />
+            onclick="location.href='https://linkedin.com/'"/>
           <img
             src="assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='/https://github.com/'"
-          />
+            onclick="location.href='https://github.com/'"/>
         </div>
       </div>
     </section>
@@ -90,17 +87,15 @@
               <img
                 src="assets/experience.png"
                 alt="Experience icon"
-                class="icon"
-              />
+                class="icon"/>
               <h3>Experience</h3>
-              <p>1+ years <br />Full Stack Web Development</p>
+              <p>1 year <br />Full Stack Web Development</p>
             </div>
             <div class="details-container">
               <img
                 src="assets/education.png"
                 alt="Education icon"
-                class="icon"
-              />
+                class="icon"/>
               <h3>Education</h3>
               <p>B.Arts Bachelors Degree<br />M.Sc. Masters Degree</p>
             </div>
@@ -110,8 +105,13 @@
               Greetings, I'm Jeremiah!
               I'm a Navy veteran who has charted a unique course from healthcare to the world of software development.
               With a graduate degree in healthcare and a background in serving our country,
-              I've discovered a new and fervent passion for coding.
-              Here's a little glimpse into who I am.
+              I've discovered a new and earnest passion for coding.
+              Here's a little glimpse into who I am!
+              Born and raised in the heart of the South,
+              I carry with me the values of southern hospitality and a deep connection to the outdoors
+              which many of my hobbies revolve around.
+              In my free time, you can find me exploring the great outdoors,
+              hiking or simply enjoying the peace and serenity of nature itself.
 
               After years of dedicated service in the Navy, I transitioned into the healthcare industry,
               where I acquired valuable skills in patient care and healthcare management.
@@ -121,29 +121,11 @@
               problem-solving, and innovation that I now find deeply satisfying.
 
               My academic journey led me to a graduate degree in healthcare,
-              equipping me with a unique blend of analytical and critical thinking skills
+              equipping me with a special blend of analytical and critical thinking skills
               that have proven invaluable in the tech world.
               My background in healthcare has instilled a strong sense of empathy and attention to detail,
               qualities I now bring to my coding projects.
-
-<!--              Being a true introvert at heart, find solace and inspiration in the quiet moments of life.
-My minimalist lifestyle reflects not only my simplicity in design but also in my approach to problem-solving.
-I believe that less is often more, both in code and in life.
-It's this mindset that helps me create elegant and efficient solutions.-->
-
-<!--              Southern Roots-->
-              Born and raised in the heart of the South,
-              I carry with me the values of southern hospitality and a deep connection to the outdoors.
-              Nature is my sanctuary, and I often seek refuge in the beauty of the natural world,
-              which serves as a wellspring of creativity and inspiration.
-
-<!--              My Passions-->
-              In my free time, you can find me exploring the great outdoors, hiking through scenic trails,
-              or simply enjoying the peace and serenity of a campfire under the stars.
-              This connection with nature complements my work in web development,
-              as it fuels my imagination and problem-solving abilities.
               <br><br>
-
               Overall,
               I'm excited
               to bring this unique combination of experiences and perspectives to the web development community,
@@ -156,8 +138,7 @@ It's this mindset that helps me create elegant and efficient solutions.-->
         src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
-      />
+        onclick="location.href='./#experience'"/>
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
@@ -169,43 +150,49 @@ It's this mindset that helps me create elegant and efficient solutions.-->
             <div class="article-container">
               <article>
                 <img
-                  src="assets/checkmark.png"
+                  src="./assets/checkmark.png"
                   alt="Experience icon"
-                  class="icon"
-                />
+                  class="icon"/>
                 <div>
                   <h3>HTML</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
                 <div>
                   <h3>CSS</h3>
-                  <p>Basic</p>
+                  <p><span>Basic</span></p>
                 </div>
               </article>
               <article>
                 <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p><span>Basic</span></p>
                 </div>
               </article>
               <article>
                 <img
-                  src="assets/checkmark.png"
+                  src="./assets/checkmark.png"
                   alt="Experience icon"
-                  class="icon"
-                />
+                  class="icon"/>
+                <div>
+                  <h3>ReAct</h3>
+                  <p><span>Basic</span></p>
+                </div>
+              </article>
+              <article>
+                <img
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
                 <div>
                   <h3>Bootstrap</h3>
                   <p>Basic</p>
@@ -213,24 +200,12 @@ It's this mindset that helps me create elegant and efficient solutions.-->
               </article>
               <article>
                 <img
-                  src="assets/checkmark.png"
+                  src="./assets/checkmark.png"
                   alt="Experience icon"
-                  class="icon"
-                />
+                  class="icon"/>
                 <div>
                   <h3>API's</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Test-Driven Development (TDD)</h3>
-                  <p>Basic</p>
+                  <p><span>Basic</span></p>
                 </div>
               </article>
             </div>
@@ -240,43 +215,9 @@ It's this mindset that helps me create elegant and efficient solutions.-->
             <div class="article-container">
               <article>
                 <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Java SE</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Java EE</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Spring Boot</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
                 <div>
                   <h3>MySQL</h3>
                   <p>Basic</p>
@@ -284,35 +225,43 @@ It's this mindset that helps me create elegant and efficient solutions.-->
               </article>
               <article>
                 <img
-                  src="assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
                 <div>
-                  <h3>JUnit Testing</h3>
-                  <p>Basic</p>
+                  <h3>Java</h3>
+                  <p><span>Basic</span></p>
                 </div>
-              </article> <article>
-              <img
-                   src="assets/checkmark.png"
-                   alt="Experience icon"
-                   class="icon"
-              />
-              <div>
-                <h3>Object-Oriented Programming (OOP)</h3>
-                <p>Basic</p>
-              </div>
-            </article>
+              </article>
+              <article>
+                <img
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
+                <div>
+                  <h3>Spring Boot</h3>
+                  <p><span>Basic</span></p>
+                </div>
+              </article>
+              <article>
+                <img
+                 src="./assets/checkmark.png"
+                 alt="Experience icon"
+                 class="icon"/>
+                <div>
+                  <h3>Ruby</h3>
+                  <p><span>Basic</span></p>
+                </div>
+              </article>
             </div>
           </div>
         </div>
       </div>
       <img
-        src="assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
+              src="./assets/arrow.png"
+              alt="Arrow icon"
+              class="icon arrow"
+              onclick="location.href='./#projects'"/>
     </section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
@@ -324,23 +273,20 @@ It's this mindset that helps me create elegant and efficient solutions.-->
               <img
                 src="/assets/project-1"
                 alt="Project 1"
-                class="project-img"
-              />
+                class="project-img"/>
             </div>
             <h2 class="experience-sub-title project-title">Project One</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
+                onclick="location.href='https://github.com/'">Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+<!--              <button-->
+<!--                class="btn btn-color-2 project-btn"-->
+<!--                onclick="location.href='https://github.com/'"-->
+<!--              >-->
+<!--                Live Demo-->
+<!--              </button>-->
             </div>
           </div>
           <div class="details-container color-container">
@@ -348,23 +294,20 @@ It's this mindset that helps me create elegant and efficient solutions.-->
               <img
                 src="assets/project-2"
                 alt="Project 2"
-                class="project-img"
-              />
+                class="project-img"/>
             </div>
             <h2 class="experience-sub-title project-title">Project Two</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
+                onclick="location.href='https://github.com/'">Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+<!--              <button-->
+<!--                class="btn btn-color-2 project-btn"-->
+<!--                onclick="location.href='https://github.com/'"-->
+<!--              >-->
+<!--                Live Demo-->
+<!--              </button>-->
             </div>
           </div>
           <div class="details-container color-container">
@@ -372,23 +315,20 @@ It's this mindset that helps me create elegant and efficient solutions.-->
               <img
                 src="assets/project-3"
                 alt="Project 3"
-                class="project-img"
-              />
+                class="project-img"/>
             </div>
             <h2 class="experience-sub-title project-title">Project Three</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
+                onclick="location.href='https://github.com/'">Github
               </button>
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Live Demo
-              </button>
+<!--              <button-->
+<!--                class="btn btn-color-2 project-btn"-->
+<!--                onclick="location.href='https://github.com/'"-->
+<!--              >-->
+<!--                Live Demo-->
+<!--              </button>-->
             </div>
           </div>
         </div>
@@ -397,8 +337,7 @@ It's this mindset that helps me create elegant and efficient solutions.-->
         src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#contact'"
-      />
+        onclick="location.href='./#contact'"/>
     </section>
     <section id="contact">
       <p class="section__text__p1">Get in Touch</p>
@@ -408,16 +347,14 @@ It's this mindset that helps me create elegant and efficient solutions.-->
           <img
             src="assets/email.png"
             alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="Jeremiah.Matthews105@gmail.com">Jeremiah.Matthews105@gmail.com</a></p>
+            class="icon contact-icon email-icon"/>
+          <p><a href="mailto:examplemail@gmail.com">Jeremiah.Matthews105@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
             src="assets/linkedin.png"
             alt="LinkedIn icon"
-            class="icon contact-icon"
-          />
+            class="icon contact-icon"/>
           <p><a href="https://www.linkedin.com">LinkedIn</a></p>
         </div>
       </div>
@@ -438,7 +375,6 @@ It's this mindset that helps me create elegant and efficient solutions.-->
         <br>
         <a href="#top">Go to the top of the page.</a>
       </p>
-
     </footer>
     <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
