--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         </div>
       </div>
     </section>
+
     <section id="about">
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
@@ -97,9 +98,12 @@
                 alt="Education icon"
                 class="icon"/>
               <h3>Education</h3>
-              <p>B.Arts Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>Code up: Certificate of Completion</p>
+              <p>Bachelors Degree</p>
+              <p>Masters of Science</p>
             </div>
           </div>
+
           <div class="text-container">
             <p>
               Greetings, I'm Jeremiah!
