working on html

--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                  src="./assets/checkmark.png"
                  alt="Experience icon"
                  class="icon"/>
-                <div>
-                  <h3>Ruby</h3>
-                  <p><span>Basic</span></p>
-                </div>
+<!--                <div>-->
+<!--                  <h3>Ruby</h3>-->
+<!--                  <p><span>Basic</span></p>-->
+<!--                </div>-->
               </article>
             </div>
           </div>
@@ -326,6 +326,9 @@
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'">Github
+              </button>
+              <button>
+                <a href="/" alt="live-btn"></a>
               </button>
 <!--              <button-->
 <!--                class="btn btn-color-2 project-btn"-->
